--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -236,11 +236,11 @@ button {
 /* MainTxtBnr */
 .MainTxtBnr {
     background: #1a8ccc;
-    height: 46px;
-    font-size: 16px;
+    height: 36px;
+    font-size: 12px;
     color: #fff;
     text-align: center;
-    line-height: 46px;
+    line-height: 34px;
 }
 
 
@@ -304,6 +304,41 @@ button {
     width: 100%;
 }
 
+/* slider : 좌우 버튼(공통 GNB) => cSlider */
+.cSlider .bx-wrapper .bx-prev {
+    background: url("../../../img/willbes/m/main/btn_prev.png") no-repeat 0 0;
+    left: 20px !important;
+}
+.cSlider .bx-wrapper .bx-next {
+    background: url("../../../img/willbes/m/main/btn_next.png") no-repeat 0 0;
+    right: 20px !important;
+}
+.cSlider .bx-wrapper .bx-controls-direction {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 15px;
+    margin-top: -7px;
+}
+.cSlider .bx-wrapper .bx-controls-direction a {
+    width: 9px;
+    height: 15px;
+    left: auto;
+    right: auto;
+}
+.MainSlider .sliderControls img {
+    width: 100%;
+}
+
+/* line 공통 */
+.line {
+    background: #e9e9e9;
+    height: 5px;
+    border-bottom: 1px solid #ccc;
+    text-indent: -9999px;
+}
 
 /* Tabs : lineTab 공통 */
 .lineTabs {
@@ -528,7 +563,6 @@ button {
     font-size: 16px;
     color: #323232;
     padding: 15px 20px;
-
 }
 .willbes-Txt {
     font-size: 12px;
