--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -853,6 +853,9 @@ select[disabled] {
 .bdb-dark-gray {
   border-bottom: 1px solid #c9c9c9;
 }
+.bdb-none {
+  border-bottom: none !important;
+}
 .bd-none {
   border: none !important;
 }
