--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -470,6 +470,33 @@ select[disabled] {
 .h66 {
   height: 66px !important;
 }
+.h400 {
+  height: 400px !important;
+}
+.h420 {
+  height: 420px !important;
+}
+.h460 {
+  height: 460px !important;
+}
+.h550 {
+  height: 550px !important;
+}
+.h590 {
+  height: 590px !important;
+}
+.h800 {
+  height: 800px !important;
+}
+.h900 {
+  height: 900px !important;
+}
+.h960 {
+  height: 960px !important;
+}
+.h1100 {
+  height: 1100px !important;
+}
 
 .mt-zero,
 .mt0 {
