--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4481,21 +4481,21 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .rating-stars ul > li.star {
     display:inline-block;
-    margin: 0 -2px;
+    margin: 0 -3px;
 }
-.rating-stars ul > li.star > i.fa {
+.rating-stars ul > li.star > i.fa,
+.rating-stars ul > li.star.selected.none > i.fa {
     background: url("../../img/willbes/mypage/icon_star_off.png") no-repeat center center;
-    width: 18px;
-    height: 12px;
+    width: 24px;
+    height: 24px;
     display: block;  
     cursor: pointer;
 }
-.rating-stars ul > li.star.hover > i.fa {
-    background: url("../../img/willbes/mypage/icon_star_on.png") no-repeat center center;
-}
+.rating-stars ul > li.star.hover > i.fa,
 .rating-stars ul > li.star.selected > i.fa {
     background: url("../../img/willbes/mypage/icon_star_on.png") no-repeat center center;
 }
+
 .success-box {
     display: inline-block;
     margin-left: 10px;
@@ -6007,92 +6007,49 @@ table.PassZoneTable .w-data {
     float: right;
     width: 96px;
 }
+
 .willbes-Layer-PassBox540 {
     width: 540px;
-}
-.willbes-Layer-PassBox540.h400 {
-    height: 400px;
-    top: 180px;
-    right: 65px;  
 }
 .willbes-Layer-PassBox540 .userCouponTable {
     height: 80px;
 }
-
 .willbes-Layer-PassBox600 {
     width: 600px;
 }
-.willbes-Layer-PassBox600.h550 {
-    height: 550px;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-top: -275px;
-    margin-left: -300px;  
-}
-.willbes-Layer-PassBox600.h590 {
-    height: 590px;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-top: -295px;
-    margin-left: -300px;  
-}
-
 .willbes-Layer-PassBox740 {
     width: 740px;
 }
-.willbes-Layer-PassBox740.h420 {
-    height: 420px;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-top: -210px;
-    margin-left: -370px;  
-}
-.willbes-Layer-PassBox740.h460 {
-    height: 460px;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-top: -230px;
-    margin-left: -370px;  
-}
-.willbes-Layer-PassBox740.h800 {
-    height: 800px;
-    top: 135px;
-    right: 65px; 
-}
-.willbes-Layer-PassBox740.h900 {
-    height: 900px;
-    display: block;
-    top: 50%;
-    left: 50%;
-    margin-top: -450px;
-    margin-left: -370px;  
-}
-
 .willbes-Layer-PassBox800 {
     width: 800px;
 }
-.willbes-Layer-PassBox800.h960 {
-    height: 960px;
-    top: 229px;
-    right: 0;
-}
-.willbes-Layer-PassBox800.h1100 {
-    height: 1100px;
-    top: 229px;
-    right: 0;
-}
-
 .willbes-Layer-PassBox900 {
     width: 900px;
 }
-.willbes-Layer-PassBox900.h1100 {
-    height: 1100px;
-    top: 229px;
-    right: 0;
+.willbes-Layer-PassBox.abs {
+    top: 150px;
+    right: 20px; 
+}
+.willbes-Layer-PassBox.fix {
+    display: block;
+    top: 50%;
+    left: 50%;
+}
+.willbes-Layer-PassBox600.h590.fix {
+    margin-top: -295px;
+    margin-left: -300px;  
+}
+.willbes-Layer-PassBox740.h420.fix {
+    margin-top: -210px;
+    margin-left: -370px;  
+}
+.willbes-Layer-PassBox740.h460.fix {
+    margin-top: -230px;
+    margin-left: -370px;  
+}
+.willbes-Layer-PassBox740.h900.fix {
+    margin-top: -450px;
+    margin-left: -370px;  
 }
 
 /* subContainer : Mypage : 무한PASS존 : willbes-Mypage-PASSZONE : willbes-Layer-PassBox : PASSZONE-List */
@@ -6547,6 +6504,54 @@ table.testTable tr td.w-btn a {
     font-size: 12px;
     color: #fff;
     text-align: center;
+}
+
+/* subContainer : Mypage : 모의고사관리 : start-testTable */
+.LeclistTable .start-testTable tr th {
+    line-height: 50px;
+}
+.LeclistTable .start-testTable tr td {
+    line-height: 20px;
+    padding: 10px 0;
+}
+.LeclistTable .start-testTable tr td span {
+    vertical-align: baseline;
+}
+.LeclistTable .start-testTable tr th,
+.LeclistTable .start-testTable tr td {
+   border-left: 1px solid #edeeef; 
+}
+.LeclistTable .start-testTable tr th.Top,
+.LeclistTable .start-testTable tr td.Top {
+   border-left: none;
+}
+.withdrawalListTable input,
+.withdrawalListTable select {
+    border: 1px solid #d4d4d4;
+    width: 154px;
+    height: 26px;
+}
+.withdrawal .w-btn {
+    margin-top: 15px;
+    text-align: center;
+}
+.withdrawal .w-btn ul li {
+    display: inline-block;
+    width: 67px;
+    height: 22px;
+    margin: 0 3px;
+}
+.withdrawal .w-btn a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    line-height: 20px;
+}
+.withdrawal .w-btn a.blueBox {
+    color: #fff
+}
+.withdrawal .w-btn a.whiteBox {
+    color: #3c3c3c;    
 }
 
 /* subContainer : Mypage : 결제관리 : orderTable */
