--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -5984,6 +5984,14 @@ table.PassZoneTable .w-data {
     width: 100%;
     padding: 30px 0 0;
 }
+.willbes-Layer-PassBox .passzoneTitInfo {
+    background: #f9f9f9;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 10px;
+    margin-bottom: 20px;
+    letter-spacing: 0;
+}
 .willbes-Layer-PassBox .passzoneInfo {
     background: #f9f9f9;
     padding: 10px;
@@ -6000,6 +6008,24 @@ table.PassZoneTable .w-data {
 .willbes-Layer-PassBox .passzoneInfo li.txt {
     padding-left: 10px;
 }
+.willbes-Layer-PassBox .passzoneSubInfo {
+    margin-bottom: 35px;
+    letter-spacing: 0;
+}
+.willbes-Layer-PassBox .passzoneSubInfo li {
+    line-height: 23px;
+}
+.willbes-Layer-PassBox .passzoneSubInfo li.txt {
+    padding-left: 10px;
+}
+.willbes-Layer-PassBox .passzonefinInfo {
+    font-size: 12px;
+    line-height: 26px;
+}
+.willbes-Layer-PassBox .passzonefinInfo div {
+    font-size: 16px;
+    margin: 40px 0;
+}
 .willbes-Layer-PassBox .emailBox {
     float: left;
 }
@@ -6007,7 +6033,6 @@ table.PassZoneTable .w-data {
     float: right;
     width: 96px;
 }
-
 .willbes-Layer-PassBox540 {
     width: 540px;
 }
@@ -6027,7 +6052,7 @@ table.PassZoneTable .w-data {
     width: 900px;
 }
 .willbes-Layer-PassBox.abs {
-    top: 150px;
+    top: 80px;
     right: 20px; 
 }
 .willbes-Layer-PassBox.fix {
@@ -6253,6 +6278,9 @@ table.PassZoneTable .w-data {
 .PASSZONE-List .cart-PriceBox dl.priceBox {
     width: 360px;
     left: 80px;
+}
+.PASSZONE-List .passzonebtn span {
+    margin: 0 10px;
 }
 
 /* subContainer : Mypage : 무한PASS존 : willbes-Mypage-PASSZONE : willbes-Layer-PassBox : PASSZONE-Add */
@@ -6506,53 +6534,51 @@ table.testTable tr td.w-btn a {
     text-align: center;
 }
 
-/* subContainer : Mypage : 모의고사관리 : start-testTable */
-.LeclistTable .start-testTable tr th {
+/* subContainer : Mypage : 모의고사관리 : usertestTable */
+.LeclistTable .usertestTable tr th {
     line-height: 50px;
 }
-.LeclistTable .start-testTable tr td {
+.LeclistTable .usertestTable tr td {
     line-height: 20px;
     padding: 10px 0;
 }
-.LeclistTable .start-testTable tr td span {
+.LeclistTable .usertestTable tr td span {
     vertical-align: baseline;
 }
-.LeclistTable .start-testTable tr th,
-.LeclistTable .start-testTable tr td {
+.LeclistTable .usertestTable tr th,
+.LeclistTable .usertestTable tr td {
    border-left: 1px solid #edeeef; 
 }
-.LeclistTable .start-testTable tr th.Top,
-.LeclistTable .start-testTable tr td.Top {
+.LeclistTable .usertestTable tr th.Top,
+.LeclistTable .usertestTable tr td.Top {
    border-left: none;
 }
-.withdrawalListTable input,
-.withdrawalListTable select {
-    border: 1px solid #d4d4d4;
-    width: 154px;
-    height: 26px;
+.LeclistTable .usertestTable tr td.round-red {
+    background: url("../../img/willbes/mypage/icon_round_red.png") no-repeat center center;
 }
-.withdrawal .w-btn {
-    margin-top: 15px;
-    text-align: center;
+.LeclistTable .usertestTable tr td.round-blue {
+    background: url("../../img/willbes/mypage/icon_round_blue.png") no-repeat center center;
 }
-.withdrawal .w-btn ul li {
-    display: inline-block;
-    width: 67px;
-    height: 22px;
-    margin: 0 3px;
+.LeclistTable .usertestTable tr td div.s-line {
+    width: 74px;
+    height: 29px;
+    margin: 10px auto 0;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    line-height: 27px;
 }
-.withdrawal .w-btn a {
-    display: block;
-    width: 100%;
-    height: 100%;
-    line-height: 20px;
+.LeclistTable .usertestTable tr td div.s-line.tx-y-green {
+    border-top: 1px solid #35820e;
+    border-bottom: 1px solid #35820e;
 }
-.withdrawal .w-btn a.blueBox {
-    color: #fff
+.LeclistTable .usertestTable tr td div.s-line.round-red {
+    background: url("../../img/willbes/mypage/icon_round_red.png") no-repeat center center;
 }
-.withdrawal .w-btn a.whiteBox {
-    color: #3c3c3c;    
+.LeclistTable .usertestTable tr td div.s-line.round-blue {
+    background: url("../../img/willbes/mypage/icon_round_blue.png") no-repeat center center;
 }
+
+
 
 /* subContainer : Mypage : 결제관리 : orderTable */
 .orderTable.LeclistTable .listTable tr td {
