내강의실 > 모의고사관리 > 접수현황, 온라인모의고사 응시 작업 페이지 추가업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2550,6 +2550,7 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
 .willbes-Layer-Box.d2 .Layer-Tit {
     margin-bottom: 0;
     border-bottom: 2px solid #000;
+    padding-bottom: 20px;
 }
 .willbes-Layer-Box.d2 .classInfo {
     padding-top: 20px;
