--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2408,7 +2408,8 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     left: 50%;
     z-index: 11;
     width: 980px;
-    margin-left: -490px;
+    height: auto;
+    transform: translate(-50%, -50%);
     border: 1px solid #2f2f2f;
     padding: 20px;
 }
