--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3407,57 +3407,49 @@ table.classTable tr td.w-data {
 }
 
 /* subContainer : Content : mockTable */
-
-.tabGrid {
-    height: 40px;
-    border-bottom: 1px solid #4f4f4f;
+.tabMock {
+    height: 34px;
+    border-bottom: 1px solid #0d74ae;
 }
-.tabGrid li {
+.tabMock li {
+    height: 34px;
+}
+.tabMock.three li {
     float: left;
-    width: 50%;
-    height: 40px;
+    width: 160px;
 }
-.tabGrid.three li {
-    float: left;
-    width: 33.33333333%;
-    height: 40px;
-}
-.tabGrid li a {
+.tabMock li a {
     display: block;
     width: 100%;
-    height: 39px;
-    line-height: 38px;
-    background: #f5f5f5;
-    font-size: 15px;
-    font-weight: 600;
-    color: #878787;
+    height: 33px;
+    line-height: 32px;
+    background: #fff;
+    font-size: 12px;
+    color: #959595;
     text-align: center;
     letter-spacing: 0;
-    border-top: 1px solid #dbdbdb;
-    border-left: 1px solid #dbdbdb;
-    border-right: 1px solid #dbdbdb;
+    border-top: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
 }
-.tabGrid li a.on {
+.tabMock li:first-child a {
+    border-left: 1px solid #e1e1e1;
+}
+.tabMock li a.on {
     background: #fff;
-    height: 40px;
+    height: 34px;
     line-height: 32px;
-    color: #3a3a3a;
-    border-top: 4px solid #4f4f4f;
-    border-left: 4px solid #4f4f4f;
-    border-right: 4px solid #4f4f4f;
+    font-weight: 600;
+    color: #0d74ae;
+    border-top: 1px solid #0d74ae;
+    border-left: 1px solid #0d74ae;
+    border-right: 1px solid #0d74ae;
 }
-.tabGrid li:first-child a.on {
-    border-left: 4px solid #4f4f4f;
-}
-
-
-
 .LeclistTable table.mockTable tr td.w-price {
     font-weight: 300;
     text-align: center;
     padding: 0;
 }
-.LeclistTable table.mockTable tr td.w-day {
+.LeclistTable table.mockTable tr td {
     line-height: 16px;
     padding: 12px 0;
 }
