--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2413,8 +2413,8 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     left: 50%;
     z-index: 11;
     width: 980px;
+    margin-left: -490px;
     height: auto;
-    transform: translate(-50%, -50%);
     border: 1px solid #2f2f2f;
     padding: 20px;
 }
@@ -2429,7 +2429,7 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     line-height: 25px;
     letter-spacing: 0;
     margin-top: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 .willbes-Layer-Box-sm {
     display: none;
@@ -2962,6 +2962,9 @@ table.classTable tr td.w-data {
 }
 
 /* subContainer : Content : 강의목차 : LeclistTable */
+.LeclistTable {
+    clear: both;
+}
 .LeclistTable .listTable tr th,
 .LeclistTable .listTable tr td {
     text-align: center;
@@ -3172,6 +3175,7 @@ table.classTable tr td.w-data {
     color: #0d74ae;
     text-decoration: underline;
 }
+
 .willbes-LecreplyList ul {
     float: right;
 }
@@ -3179,6 +3183,24 @@ table.classTable tr td.w-data {
     display: inline-block;
     line-height: 20px;
 }
+.replyBtnBox {
+    position: absolute;
+    right: 0;
+}
+.replyBtnBox.top {
+    top: 35px;
+}
+.replyBtnBox.btm {
+    bottom: 0;
+}
+.replyBtnBox ul {
+    float: right;
+}
+.replyBtnBox ul li {
+    display: inline-block;
+    line-height: 20px;
+}
+
 .willbes-LecreplyList dl {
     display: inline-block;
 }
@@ -4892,6 +4914,8 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 
 .willbes-Lec-Selected {
+    float: left;
+    width: 100%;
     margin: 10px 0 20px;
 }
 .willbes-Lec-Selected select {
@@ -6210,6 +6234,7 @@ table.PassZoneTable .w-data {
     font-weight: 300 !important;
 }
 .PASSZONE-List .LeclistPASSTable {
+    clear: both;
     height: 255px;
     overflow-x: auto;
     border-top: 1px solid #959595;
